test git double

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Introduction</h1>
-    <a href="index1.html">Notre Ville</a>
+    <a href="index1.html">Notre Village</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, omnis vel autem eum aut, quibusdam aspernatur dolor vero, ducimus quo numquam excepturi cumque illo totam quidem consectetur impedit placeat tempora?</p>
     <!--ici on peut modifier la taille d'image-->
     <img src="reims2.jpeg" alt="Cathedrale">
